# edge-hive

./: .dockerignore  .env.example  .gitignore  .tmp_cargo_test_ws_live.txt  .tmp_cargo_test_ws_live_summary.txt  .tmp_ci_sanity.txt  .tmp_git_log2.txt  .tmp_git_status.txt  .tmp_git_status2.txt  .tmp_surrealdb_client_live_method.rs.txt  .tmp_surrealdb_dirs.txt  .tmp_surrealdb_lib.rs.txt  .tmp_surrealdb_live_hits.txt  .tmp_surrealdb_live_rs.txt  .tmp_surrealdb_notification_def.rs.txt  .tmp_surrealdb_notification_path.txt  .tmp_surrealdb_src_files.txt  .tmp_test_core_api.txt  .tmp_test_core_api2.txt  .tmp_test_core_api3.txt  .tmp_test_core_api4.txt  .tmp_test_db_rt.txt  .tmp_test_e2e_vps.txt  .tmp_test_e2e_vps2.txt  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.Docker.md  README.md  build-cli.txt  check_error.txt  check_error_clean.txt  create_logo.py  docker-compose.dev.yml  docker-compose.yml  issues_all.json  (+6 more)
.agent/workflows/: finish.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: protocol-claude.agent.md
.github/issues/: APP_cloud-dashboard.md  APP_modern-ui.md  APP_tauri-mobile.md  BUG_fix_main_compilation.md  CHORE_cleanup-rust-cache.md  CLOUD_aws-auto-provision.md  CLOUD_stripe-billing.md  CORE_workspace-setup.md  CRITICAL_tor-implementation.md  DATA_surrealdb-integration.md  DEPLOY_android-apk.md  DEPLOY_docker-compose.md  DEPLOY_windows-app.md  DOCS_admin-panel.md  DOCS_licensing.md  EPIC_admin_experience.md  EPIC_core_systems_evolution.md  EPIC_edge-hive.md  FEAT_android-apk.md  FEAT_android-ui-testing.md  FEAT_api-gateway-unified.md  FEAT_auth-middleware-db.md  FEAT_cache-layer-moka-redis.md  FEAT_cloud-provisioning.md  FEAT_dependency-audit.md  FEAT_edge-function-login.md  FEAT_edge-functions-wasm.md  FEAT_edge_functions_v2.md  FEAT_hive-raid.md  FEAT_libp2p-discovery.md  FEAT_login-handler-real.md  FEAT_mcp-admin-api.md  FEAT_mcp-server-implementation.md  FEAT_node-advertisement-protocol.md  FEAT_oauth2-mcp-authentication.md  FEAT_protocol-v3-full-autonomy.md  FEAT_realtime-websocket.md  (+38 more)
.tmp/: .gitkeep
.✨/: AGENT_INDEX.md  ARCHITECTURE.md  NETWORK_ARCHITECTURE.md  features.json
app/: TESTING.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs  test-run.txt  tsconfig.json  vitest.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  lib.rs  main.rs  mcp_commands.rs
build-output/: .gitkeep
crates/edge-hive-api/: Cargo.toml
crates/edge-hive-api/src/: lib.rs  state.rs
crates/edge-hive-api/src/handlers/: auth.rs  data.rs  edge.rs  health.rs  mcp.rs  mcp_auth.rs  mod.rs  realtime.rs  user.rs  wasm.rs
crates/edge-hive-api/src/middleware/: auth.rs  cache.rs  mod.rs
crates/edge-hive-api/tests/: auth.rs
crates/edge-hive-auth/: Cargo.toml  README.md
crates/edge-hive-auth/src/: client.rs  error.rs  jwt.rs  lib.rs  middleware.rs  oauth2.rs
crates/edge-hive-billing/: Cargo.toml
crates/edge-hive-billing/src/: lib.rs
crates/edge-hive-cache/: Cargo.toml
crates/edge-hive-cache/src/: l1_cache.rs  l2_cache.rs  lib.rs  metrics.rs
crates/edge-hive-cloud/: Cargo.toml
crates/edge-hive-cloud/src/: lib.rs
crates/edge-hive-core/: Cargo.toml
crates/edge-hive-core/src/: auth.rs  config.rs  lib.rs  main.rs  server.rs  tls.rs
crates/edge-hive-core/src/commands/: auth.rs  cloud.rs  db.rs  init.rs  mcp.rs  mod.rs  peers.rs  ping.rs  plugin.rs  serve.rs  status.rs  tunnel.rs
crates/edge-hive-core/tests/: .tmp_git_status.txt  .tmp_test_e2e_vps.txt  cli.rs  e2e_vps_api_realtime_edge.rs  server.rs  server_lifecycle.rs  test.wasm  wasm.rs
crates/edge-hive-db/: Cargo.toml
crates/edge-hive-db/src/: lib.rs  session.rs  user.rs
crates/edge-hive-discovery/: Cargo.toml  src_lib.rs
crates/edge-hive-discovery/src/: behaviour.rs  lib.rs
crates/edge-hive-identity/: Cargo.toml
crates/edge-hive-identity/src/: lib.rs
crates/edge-hive-mcp/: Cargo.toml
crates/edge-hive-mcp/src/: lib.rs
crates/edge-hive-realtime/: Cargo.toml
crates/edge-hive-realtime/src/: lib.rs  protocol.rs  server.rs  system_monitor.rs
crates/edge-hive-tunnel/: Cargo.toml  src.rs
crates/edge-hive-tunnel/examples/: tor_service.rs
crates/edge-hive-tunnel/src/: lib.rs  tor.rs
crates/edge-hive-tunnel/src/tor/: bootstrap.rs  client.rs  config.rs  mod.rs  onion.rs
crates/edge-hive-wasm/: Cargo.toml  README.md
crates/edge-hive-wasm/src/: error.rs  function.rs  host.rs  lib.rs  limits.rs  prelude.rs  runtime.rs
crates/edge-hive-wasm/tests/: integration_test.rs
docs/: EDGE_FUNCTIONS_RUST.md  README.md  TOR_INTEGRATION.md  VPS_MIGRATION_PLAN.md
edge-hive-admin/: .gitignore  App.tsx  README.md  TASK.md  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  types.ts  vite.config.ts
edge-hive-admin/src-tauri/: Cargo.toml  tauri.conf.json
edge-hive-admin/src-tauri/icons/: icon.icns
edge-hive-admin/src-tauri/src/: auth_commands.rs  billing_commands.rs  cache_commands.rs  chaos_commands.rs  cloud_commands.rs  commands.rs  db_commands.rs  function_commands.rs  lib.rs  log_commands.rs  main.rs  mcp_commands.rs  settings_commands.rs  storage_commands.rs  task_commands.rs  tasks_commands.rs  terminal_commands.rs  tunnel_commands.rs  types.rs  vpn_commands.rs
examples/edge-functions/hello/: Cargo.toml  README.md  build.rs
examples/edge-functions/hello/src/: lib.rs
logs/: .gitkeep
scripts/: clean-closed-issues.ps1  cleanup-workspace.ps1  cleanup-workspace.sh  deploy-docker.ps1  detect-repo-config.ps1  detect-repo-config.sh  dispatcher-core.ps1  e2e-test.sh  gc-finish.ps1  guardian-core.ps1  install-termux.sh  install.sh  manual-cleanup.ps1  merge-draft-pr.ps1  merge-draft-pr.sh  migrate-docs-to-diataxis.ps1  send-telemetry.ps1  sync-issues.ps1  termux-install.sh  test-adaptive-system.ps1  test-adaptive-system.sh  test-mcp-e2e.ps1  test-mcp.ps1  test-mvp.ps1  test-oauth2.ps1  uninstall-termux.sh
src/: main.rs
templates/: features.json.template
tests/: integration_serve.rs  libp2p_discovery.rs
(+117 files in other folders)
