[workspace]
resolver = "2"
members = [
    "crates/edge-hive-core",
    "crates/edge-hive-identity",
    "crates/edge-hive-discovery",
    "crates/edge-hive-tunnel",
    "crates/edge-hive-db",
    "crates/edge-hive-wasm",
    "crates/edge-hive-billing",
    "crates/edge-hive-cloud",
    "app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/your-org/edge-hive"
authors = ["Edge Hive Contributors"]
rust-version = "1.85"

# Cross-compilation targets (GitHub Actions builds all)
# Priority targets for Phase 1:
# - x86_64-unknown-linux-gnu    (Linux PC, VPS)
# - x86_64-unknown-linux-musl   (Docker, Alpine)
# - aarch64-linux-android       (Android via Termux)
# - x86_64-pc-windows-gnu       (Windows)

[package]
name = "edge-hive"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "edge-hive"
path = "src/main.rs"

[dependencies]
# CLI
clap.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Internal crates
edge-hive-identity.workspace = true
edge-hive-core = { path = "crates/edge-hive-core" }
edge-hive-discovery = { path = "crates/edge-hive-discovery" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
libp2p = { workspace = true }

# Utils
directories = "5.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

# Cross-compilation targets (GitHub Actions builds all)
# Priority targets for Phase 1:
# - x86_64-unknown-linux-gnu    (Linux PC, VPS)
# - x86_64-unknown-linux-musl   (Docker, Alpine)
# - aarch64-linux-android       (Android via Termux)
# - x86_64-pc-windows-gnu       (Windows)

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Web Framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
blake3 = "1.5"                                                # Fast hashing for node IDs

# P2P Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "mdns",
    "kad",
    "noise",
    "quic",
    "tcp",
    "dns",
    "identify",
    "yamux",
] }

# Tor Integration (Arti - Pure Rust Tor)
arti-client = "0.20"
tor-hsservice = "0.20"                                    # Onion Services v3
tor-rtcompat = { version = "0.20", features = ["tokio"] }

# Database
surrealdb = { version = "2.0", features = ["kv-mem"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
config = "0.14"

# Internal crates
edge-hive-core = { path = "crates/edge-hive-core" }
edge-hive-identity = { path = "crates/edge-hive-identity" }
edge-hive-discovery = { path = "crates/edge-hive-discovery" }
edge-hive-tunnel = { path = "crates/edge-hive-tunnel" }
edge-hive-db = { path = "crates/edge-hive-db" }
edge-hive-wasm = { path = "crates/edge-hive-wasm" }
edge-hive-billing = { path = "crates/edge-hive-billing" }
edge-hive-cloud = { path = "crates/edge-hive-cloud" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
