[workspace]
resolver = "2"
members = [
    "crates/edge-hive-core",
    "crates/edge-hive-identity",
    "crates/edge-hive-discovery",
    "crates/edge-hive-tunnel",
    "crates/edge-hive-db",
    "crates/edge-hive-wasm",
    "crates/edge-hive-cloud",
    "crates/edge-hive-mcp",
    "crates/edge-hive-auth",
    "crates/edge-hive-cache",
    "crates/edge-hive-api",
    "crates/edge-hive-realtime",
    "edge-hive-admin/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/your-org/edge-hive"
authors = ["Edge Hive Contributors"]
rust-version = "1.85"

# Cross-compilation targets (GitHub Actions builds all)
# Priority targets for Phase 1:
# - x86_64-unknown-linux-gnu    (Linux PC, VPS)
# - x86_64-unknown-linux-musl   (Docker, Alpine)
# - aarch64-linux-android       (Android via Termux)
# - x86_64-pc-windows-gnu       (Windows)

[package]
name = "edge-hive"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "edge-hive"
path = "src/main.rs"

[dependencies]
# CLI
clap.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Internal crates
edge-hive-identity.workspace = true
edge-hive-core = { path = "crates/edge-hive-core" }
edge-hive-discovery = { path = "crates/edge-hive-discovery" }
edge-hive-auth = { path = "crates/edge-hive-auth", features = ["server"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
libp2p.workspace = true

# Utils
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2.0"
predicates = "3.1"

# Cross-compilation targets (GitHub Actions builds all)
# Priority targets for Phase 1:
# - x86_64-unknown-linux-gnu    (Linux PC, VPS)
# - x86_64-unknown-linux-musl   (Docker, Alpine)
# - aarch64-linux-android       (Android via Termux)
# - x86_64-pc-windows-gnu       (Windows)

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Web Framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
blake3 = "1.5"                                                # Fast hashing for node IDs

# P2P Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "mdns",
    "kad",
    "noise",
    "tcp",
    "identify",
    "yamux",
    "macros",
] }

# Tor Integration (Arti - Pure Rust Tor)
arti-client = "0.20"
tor-hsservice = "0.20"                                    # Onion Services v3
tor-rtcompat = { version = "0.37", features = ["tokio"] }

# Database
surrealdb = { version = "2.0", features = ["kv-mem"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
config = "0.14"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"
directories = "5.0"
tempfile = "3.10"
sha3 = "0.10"
data-encoding = "2.6"
ed25519-consensus = "2"
which = "6.0"
sysinfo = "0.37"
portable-pty = "0.8"
base64 = "0.22"
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper", "webhook-events"] }

# Internal crates
edge-hive-core = { path = "crates/edge-hive-core" }
edge-hive-identity = { path = "crates/edge-hive-identity" }
edge-hive-discovery = { path = "crates/edge-hive-discovery" }
edge-hive-tunnel = { path = "crates/edge-hive-tunnel" }
edge-hive-db = { path = "crates/edge-hive-db" }
edge-hive-wasm = { path = "crates/edge-hive-wasm" }
edge-hive-billing = { path = "crates/edge-hive-billing" }
edge-hive-cloud = { path = "crates/edge-hive-cloud" }
edge-hive-auth = { path = "crates/edge-hive-auth" }
edge-hive-cache = { path = "crates/edge-hive-cache" }
edge-hive-api = { path = "crates/edge-hive-api" }
edge-hive-realtime = { path = "crates/edge-hive-realtime" }
edge-hive-mcp = { path = "crates/edge-hive-mcp" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
