[package]
name = "edge-hive-app"
version = "0.1.0"
edition = "2024"
description = "Edge Hive Mobile App"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["full"] }
sysinfo = "0.30"

# Edge Hive crates (for native integration)
# edge-hive-identity = { path = "../../crates/edge-hive-identity" }
# edge-hive-discovery = { path = "../../crates/edge-hive-discovery" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
