[package]
name = "edge-hive-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified API Gateway for Edge Hive"

[dependencies]
# HTTP Server
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http.workspace = true
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Internal dependencies
edge-hive-cache = { path = "../edge-hive-cache" }
edge-hive-db = { path = "../edge-hive-db" }
edge-hive-auth = { path = "../edge-hive-auth" }
edge-hive-realtime = { path = "../edge-hive-realtime" }

# Database
chrono.workspace = true
surrealdb.workspace = true

# Password hashing and security
argon2 = { version = "0.5", features = ["std"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
sha2 = "0.10"

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
tokio-test = "0.4"
http = "1.1"
tower = { version = "0.5", features = ["util"] }
