[package]
name = "edge-hive-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
# JWT and OAuth2
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP types (for integration with Axum)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["auth"], optional = true }

# Database (optional - for client credentials storage)
surrealdb = { version = "2.0", optional = true }

[features]
default = ["server"]
server = ["axum", "tower", "tower-http"]
db = ["surrealdb"]

[dev-dependencies]
tokio-test = "0.4"
