[package]
name = "edge-hive-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
# JWT and OAuth2
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Cryptography
sha2.workspace = true
hex.workspace = true
rand.workspace = true
uuid.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# HTTP types (for integration with Axum)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["auth"], optional = true }

# Database (optional - for client credentials storage)
surrealdb = { version = "2.0", optional = true }

[features]
default = ["server"]
server = ["axum", "tower", "tower-http"]
db = ["surrealdb"]

[dev-dependencies]
tokio-test = "0.4"
