[package]
name = "edge-hive-billing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stripe billing integration for Edge Hive managed tier"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Stripe SDK (when we implement)
# stripe-rust = "0.26"

# JWT for user tokens
jsonwebtoken.workspace = true
chrono.workspace = true

# Stripe SDK (removed old broken versions)
# stripe-rust = { version = "0.12.3", features = ["webhook-events"] }
# stripe = "0.0.5"

[dev-dependencies]
tokio-test = "0.4"
# stripe-rust = { git = "https://github.com/stripe/stripe-rust", rev = "b374187" }
