[package]
name = "edge-hive-billing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stripe billing integration for Edge Hive managed tier"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

chrono.workspace = true
jsonwebtoken.workspace = true
async-stripe = { workspace = true, features = ["runtime-tokio-hyper", "webhook-events"] }

[dev-dependencies]
tokio-test = "0.4"
# stripe-rust = { git = "https://github.com/stripe/stripe-rust", rev = "b374187" }
