[package]
name = "edge-hive-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance cache layer for Edge Hive (L1: moka, L2: mini-redis)"

[dependencies]
# L1 Cache (in-memory, nanosecond access)
moka = { version = "0.12", features = ["future"] }

# L2 Cache (Redis-compatible, microsecond access)
mini-redis = "0.4"

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

# Benchmark temporarily disabled until benches/ directory is created
# [[bench]]
# name = "cache_benchmark"
# harness = false
