[package]
name = "edge-hive-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AWS cloud provisioning for Edge Hive managed nodes"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# AWS SDK (when we implement)
# aws-config = "1.5"
# aws-sdk-ec2 = "1.80"
# aws-sdk-route53 = "1.60"
# aws-sdk-s3 = "1.65"

[dev-dependencies]
tokio-test = "0.4"
