[package]
name = "edge-hive-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core binary for Edge Hive distributed edge computing platform"

[[bin]]
name = "edge-hive"
path = "src/main.rs"

[dependencies]
# Async
tokio.workspace = true
futures.workspace = true

# Web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# Config
config.workspace = true

# Platform directories
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
edge-hive-identity.workspace = true
edge-hive-discovery.workspace = true
edge-hive-tunnel.workspace = true
edge-hive-db.workspace = true
edge-hive-auth = { path = "../edge-hive-auth", features = ["server"] }

# P2P Networking
libp2p.workspace = true

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
hyper = "1.8.1"
