[package]
name = "edge-hive-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core binary for Edge Hive distributed edge computing platform"

[[bin]]
name = "edge-hive-core"
path = "src/main.rs"

[dependencies]
# Async
tokio.workspace = true
futures.workspace = true

# Web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Static file content-types
mime_guess = "2.0"

# TLS/HTTPS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
rcgen = "0.13"                                               # For self-signed certificate generation

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# Config
config.workspace = true

# Platform directories
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"                               # For JWT verification
uuid = { version = "1.11", features = ["v4"] }

# Internal crates
edge-hive-identity.workspace = true
edge-hive-discovery.workspace = true
edge-hive-tunnel.workspace = true
edge-hive-db.workspace = true
edge-hive-cache = { path = "../edge-hive-cache" }
edge-hive-realtime = { path = "../edge-hive-realtime" }
edge-hive-api = { path = "../edge-hive-api" }
edge-hive-auth = { path = "../edge-hive-auth", features = ["server"] }
edge-hive-cloud = { path = "../edge-hive-cloud" }

# P2P Networking
libp2p.workspace = true

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
hyper = "1.8.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
