[package]
name = "edge-hive-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SurrealDB wrapper for Edge Hive"

[dependencies]
surrealdb.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
futures = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
futures.workspace = true
