[package]
name = "edge-hive-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "P2P node discovery for Edge Hive using libp2p"

[dependencies]
libp2p.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
