[package]
name = "edge-hive-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
edge-hive-auth = { path = "../edge-hive-auth", features = ["server"] }
axum = { workspace = true, features = ["json"] }

[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }
