[package]
name = "edge-hive-realtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-time WebSocket server for Edge Hive (SurrealDB Live Queries)"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# WebSocket types (for Axum integration)
axum = { workspace = true, features = ["ws"] }

# SurrealDB types for live notifications (Action/Notification/Value)
surrealdb = { workspace = true }

# Async + WebSocket
futures-util = "0.3"
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.28"

# Concurrency
dashmap = "6"

# Internal
edge-hive-db = { path = "../edge-hive-db" }

[dev-dependencies]
tokio-test = "0.4"
