[package]
name = "edge-hive-tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tunneling support for Edge Hive (Cloudflare + Tor)"

[dependencies]
tokio.workspace = true
futures.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Tor Hidden Services (Direct implementation)
tor-hsservice = "0.37"
tor-rtcompat = { version = "0.37", features = ["tokio"] }
tor-hscrypto = "0.37"
ed25519-consensus.workspace = true
directories.workspace = true
sha3.workspace = true
data-encoding.workspace = true
rand.workspace = true

# Cloudflare Tunnel (placeholder until libcfd is available)
# libcfd = "0.1"

# For fallback: spawn cloudflared process
which.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber.workspace = true
