[package]
name = "edge-hive-tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tunneling support for Edge Hive (Cloudflare + Tor)"

[dependencies]
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Tor Integration
arti-client.workspace = true
tor-rtcompat.workspace = true
directories.workspace = true

# Cloudflare Tunnel (placeholder until libcfd is available)
# libcfd = "0.1"

# For fallback: spawn cloudflared process
which.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber.workspace = true
