[package]
name = "edge-hive-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM plugin runtime for Edge Hive"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing = { workspace = true, features = ["log"] }
futures = "0.3"

# WASM runtime
wasmtime = "26"

edge-hive-db = { path = "../edge-hive-db" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
wat = "1.0"
