[package]
name = "edge-hive-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM plugin runtime for Edge Hive"

[features]
default = ["host"]
host = ["tokio", "anyhow", "tracing", "async-trait", "wasmtime"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true }

tokio = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }
wasmtime = { version = "26", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wat = "1.0"
