[package]
name = "edge-hive-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM plugin runtime for Edge Hive"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# WASM runtime
wasmtime = "40.0.0"
wasm-bindgen = "0.2"
md5 = "0.8"

[dev-dependencies]
tokio-test = "0.4"
