[package]
name = "edge-hive-admin-app"
version = "0.1.0"
edition = "2024"
description = "Edge Hive Admin Dashboard"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.9.5", default-features = false, features = ["wry"] }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["full"] }
sysinfo = "0.30"
portable-pty = "0.8"

# Edge Hive crates (for native integration)
edge-hive-mcp = { path = "../../crates/edge-hive-mcp" }
edge-hive-db = { path = "../../crates/edge-hive-db" }
edge-hive-wasm = { path = "../../crates/edge-hive-wasm" }
edge-hive-auth = { path = "../../crates/edge-hive-auth" }
edge-hive-cache = { path = "../../crates/edge-hive-cache" }
edge-hive-tunnel = { path = "../../crates/edge-hive-tunnel" }
uuid = "1.19.0"
chrono = "0.4.42"
rand.workspace = true
# edge-hive-identity = { path = "../../crates/edge-hive-identity" }
# edge-hive-discovery = { path = "../../crates/edge-hive-discovery" }

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
