[package]
name = "edge-hive-admin-app"
version = "0.1.0"
edition = "2021"
description = "Edge Hive Admin Dashboard"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0-beta.23", features = [] }
tauri-plugin-shell = "2.0.0-beta.8"
surrealdb = { workspace = true, optional = true }
notify = "6.0.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sysinfo.workspace = true
portable-pty.workspace = true
edge-hive-mcp.workspace = true
edge-hive-db.workspace = true
edge-hive-wasm.workspace = true
edge-hive-auth.workspace = true
edge-hive-billing.workspace = true
edge-hive-cache.workspace = true
edge-hive-tunnel.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
which.workspace = true
base64 = "0.22"
hex = "0.4"
flate2 = "1.0"
tar = "0.4"
# edge-hive-identity = { path = "../../crates/edge-hive-identity" }
# edge-hive-discovery = { path = "../../crates/edge-hive-discovery" }

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[features]
default = ["custom-protocol", "surrealdb"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
