[package]
name = "hello-edge-function"
version = "0.1.0"
edition = "2021"

[workspace]
# This example is standalone and not part of the main workspace

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
